load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/cmd/clusterawsadm/client",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@io_k8s_sigs_cluster_api//pkg/client/clientset_generated/clientset:go_default_library",
    ],
)
