load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "clients.go",
        "cluster.go",
        "getters.go",
        "machine.go",
        "session.go",
    ],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/pkg/cloud/scope",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/infrastructure/v1alpha2:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/ec2:go_default_library",
        "@com_github_aws_aws_sdk_go//service/ec2/ec2iface:go_default_library",
        "@com_github_aws_aws_sdk_go//service/elb:go_default_library",
        "@com_github_aws_aws_sdk_go//service/elb/elbiface:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_klog//klogr:go_default_library",
        "@io_k8s_sigs_cluster_api//pkg/apis/cluster/v1alpha2:go_default_library",
        "@io_k8s_sigs_cluster_api//pkg/controller/noderefutil:go_default_library",
        "@io_k8s_sigs_cluster_api//pkg/errors:go_default_library",
        "@io_k8s_sigs_cluster_api//pkg/util:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_utils//pointer:go_default_library",
    ],
)
