load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["interfaces.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/pkg/cloud/services",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha2:go_default_library",
        "//pkg/cloud/scope:go_default_library",
    ],
)
