load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["tags.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/pkg/cloud/tags",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/infrastructure/v1alpha2:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//service/ec2:go_default_library",
        "@com_github_aws_aws_sdk_go//service/ec2/ec2iface:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
