load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["awscluster_controller.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/pkg/controller/awscluster",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/infrastructure/v1alpha2:go_default_library",
        "//pkg/cloud/scope:go_default_library",
        "//pkg/cloud/services/ec2:go_default_library",
        "//pkg/cloud/services/elb:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_sigs_cluster_api//pkg/apis/cluster/v1alpha2:go_default_library",
        "@io_k8s_sigs_cluster_api//pkg/util:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "awscluster_controller_suite_test.go",
        "awscluster_controller_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/infrastructure/v1alpha2:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_sigs_cluster_api//pkg/apis:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/envtest:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
