load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logger.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/pkg/logging/klog",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/go-logr/logr:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)
